--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Education Website</title>
-
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700;900&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="style.css" />
+
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -46,6 +52,25 @@
 				<div><button>Contact Us</button></div>
 			</div>
 		</section>
+
+		<section class="about-section">
+			<img
+				src="images/smilinggirl.jpg"
+				alt="smiling student"
+				class="about__img"
+			/>
+			<div>
+				<h3>High Quality!</h3>
+				<h2>Let’s Start An Education With Us!</h2>
+				<p>
+					Our school is known for the high-quality education programs worldwide.
+					We work with the best teachers who know how to engage students in the
+					learning activities!
+				</p>
+				<button>MAKE AN APPOINTMENT</button>
+			</div>
+		</section>
+
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="jquery.blast.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
