added line id fixed broken link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 		<section class="hero-section">
 			<nav>
 				<div class="logo"><h1>The<span>IELTS</span>Website</h1></div>
-				<div class="openMenu"><i class="fa fa-bars"></i></div>
+				
+				<div class="openMenu"><i class="fa fa-bars"></i></div> 
 				<ul class="mainMenu">
 					<li>
 						<a href="#" class="menuLinks">
@@ -45,11 +46,15 @@
 					</span>
 				</ul>
 			</nav>
+			
 			<div class="hero-content">
+			<div class="line-container">
+				<i class="fa-brands fa-line  fa-2xl" style="color: green"> </i><h2>Line ID:Dtay777</h2> <img src="images/linecode.svg" alt="line qrcode" class="qrcode">
+			</div>
 				<p>Language School</p>
-				<h1>Easy Language</h1>
+				<h1>Easy IELTS</h1>
 				<h1>Learning</h1>
-				<div><button>Contact Us</button></div>
+				<div><button><a href="mailto:webmaster@example.com">Book Your Slot </a></button></div>
 			</div>
 		</section>
 
