--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 		<section class="hero-section">
 			<nav>
 				<div class="logo"><h1>The<span>IELTS</span>Website</h1></div>
-				
-				<div class="openMenu"><i class="fa fa-bars"></i></div> 
+
+				<div class="openMenu"><i class="fa fa-bars"></i></div>
 				<ul class="mainMenu">
 					<li>
 						<a href="#" class="menuLinks">
@@ -46,33 +46,82 @@
 					</span>
 				</ul>
 			</nav>
-			
+
 			<div class="hero-content">
-			<div class="line-container">
-				<i class="fa-brands fa-line  fa-2xl" style="color: green"> </i><h2>Line ID:Dtay777</h2> <img src="images/linecode.svg" alt="line qrcode" class="qrcode">
-			</div>
+				<div class="line-container">
+					<i class="fa-brands fa-line fa-2xl" style="color: green"> </i>
+					<h2>Line ID:Dtay777</h2>
+					<img src="images/linecode.svg" alt="line qrcode" class="qrcode" />
+				</div>
 				<p>Language School</p>
 				<h1>Easy IELTS</h1>
 				<h1>Learning</h1>
-				<div><button><a href="mailto:webmaster@example.com">Book Your Slot </a></button></div>
+				<div>
+					<button>
+						<a href="mailto:webmaster@example.com">
+							<i class="fa-regular fa-envelope"></i> Book Your Slot
+						</a>
+					</button>
+				</div>
 			</div>
 		</section>
 
-		<section class="about-section">
-			<img
-				src="images/smilinggirl.jpg"
-				alt="smiling student"
-				class="about__img"
-			/>
-			<div>
-				<h3>High Quality!</h3>
-				<h2>Let’s Start An Education With Us!</h2>
-				<p>
-					Our school is known for the high-quality education programs worldwide.
-					We work with the best teachers who know how to engage students in the
-					learning activities!
-				</p>
-				<button>MAKE AN APPOINTMENT</button>
+		<main>
+			<h1 id="main-title">
+				<i class="fa-solid fa-chalkboard-user"></i> Professional Tutors
+			</h1>
+			<section class="about-section">
+				<img
+					src="images/smilinggirl.jpg"
+					alt="smiling student"
+					class="about__img"
+				/>
+				<div>
+					<h3>High Quality!</h3>
+					<h2>Let’s Start An Education With Us!</h2>
+					<p>
+						Our school is known for the high-quality education programs
+						worldwide. We work with the best teachers who know how to engage
+						students in the learning activities!
+					</p>
+					<button>
+						<i class="fa-regular fa-envelope"></i> MAKE AN APPOINTMENT
+					</button>
+				</div>
+			</section>
+		</main>
+
+		<section class="course">
+
+			<h1>How It Works - find your perfect IELTS tutor online</h1>
+			<p>All of our high quality tutors are interviewed and background-checked before tutoring on Spires.</p>
+			<div class="course-grid-container">
+				<div class="course-card">
+					<img src="images/HowItWorks-Step1.svg" alt="">
+					<h2>Request IELTS Tuition</h2>
+					<p>
+						Tell us what you want. You will get matched with professional tutors
+						in minutes.
+					</p>
+				</div>
+				<div class="course-card">
+					<img src="images/HowItWorks-Step2.svg" alt="">
+					<h2>Choose Your IELTS Tutor</h2>
+					<p>
+						See bids from tutors who can help you. Browse their profiles,
+						reviews and communicate with them.
+					</p>
+				</div>
+				<div class="course-card">
+					<img src="images/HowItWorks-Step3.svg" alt="">
+					<h2>Have Online IELTS Lessons</h2>
+					<p>Have online classes whenever you like or where ever you are.</p>
+				</div>
+				<div class="course-card">
+					<img src="images/HowItWorks-Step4.svg" alt="">
+					<h2>Play Back Your Online Classes</h2>
+					<p>All classes are recorded so that you can watch them later.</p>
+				</div>
 			</div>
 		</section>
 
